reorganised folders and deleted server folder

--- a/Working Directory/html/validate.html
+++ b/Working Directory/html/validate.html
@@ -3,10 +3,10 @@
 
   <head>
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="Bootstrap\css\bootstrap-grid.css">
-    <link rel="stylesheet" href="Bootstrap\css\bootstrap-reboot.css">
-    <link rel="stylesheet" href="Bootstrap\css\bootstrap.css">
+    <link rel="stylesheet" href="..\css\styles.css">
+    <link rel="stylesheet" href="..\css\bootstrap-grid.css">
+    <link rel="stylesheet" href="..\css\bootstrap-reboot.css">
+    <link rel="stylesheet" href="..\css\bootstrap.css">
 
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Bungee&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" id="nav-font" href="#"><img src="assets/favicon-32x32.png" width="32" height="32" class="d-inline-block align-top favicon-nav" alt="trainer favicon"> &nbsp;SyncTrack</a>
+        <a class="navbar-brand" id="nav-font" href="#"><img src="../assets/favicon-32x32.png" width="32" height="32" class="d-inline-block align-top favicon-nav" alt="trainer favicon"> &nbsp;SyncTrack</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -61,19 +61,19 @@
     <div class="container-fluid bg-dark p-3 pt-4 footer text-center text-white">
         <div class="row">
             <div class="col-sm">
-                <img src="assets/favicon-32x32.png" width="32" height="32" class="d-inline-block align-top favicon-footer mb-2" alt="favicon">
+                <img src="../assets/favicon-32x32.png" width="32" height="32" class="d-inline-block align-top favicon-footer mb-2" alt="favicon">
                 <p class="d-inline-block align-top footer-logo-text pl-2 mb-5">SyncTrack</p>
             </div>
             <div class="col-sm">
                 <p class="footer-strava-logo-text align-top mb-2">POWERED BY</p>
-                <img class="footer-strava-logo mb-5" src="assets/readers-choice-2018-strava-logo-2016.jpeg">
+                <img class="footer-strava-logo mb-5" src="../assets/readers-choice-2018-strava-logo-2016.jpeg">
                 <p class="footer-strava-logo-text align-top mb-1">PHOTOGRAPH BY</p>
                 <a class="mb-5" SameSite="None" style="color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@marvin_ronsdorf?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Marvin Ronsdorf"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Marvin Ronsdorf</span></a>
             </div>
             <div class="col-sm">
-                <img src="assets/social icons footer/strava.png" width="32" height="32" class="d-inline-block align-top mb-2 mr-2 footer-social-icon" alt="strava social favicon">
-                <img src="assets/social icons footer/facebook.png" width="32" height="32" class="d-inline-block align-top mb-2 mr-2 footer-social-icon" alt="facebook social favicon">
-                <img src="assets/social icons footer/instagram.png" width="32" height="32" class="d-inline-block align-top mb-2 footer-social-icon" alt="instagram social favicon">
+                <img src="../assets/social icons footer/strava.png" width="32" height="32" class="d-inline-block align-top mb-2 mr-2 footer-social-icon" alt="strava social favicon">
+                <img src="../assets/social icons footer/facebook.png" width="32" height="32" class="d-inline-block align-top mb-2 mr-2 footer-social-icon" alt="facebook social favicon">
+                <img src="../assets/social icons footer/instagram.png" width="32" height="32" class="d-inline-block align-top mb-2 footer-social-icon" alt="instagram social favicon">
             </div>
         </div>
     </div>
